# OpenGL-Template

./: .gitmodules  CMakeLists.txt  README.md  common.cmake
AppName/: CMakeLists.txt
AppName/src/: main.cpp
EngineName/: CMakeLists.txt
scripts/: setup.bat  setup.sh
src/: main.c  main.cpp
